--- a/assets/css/atum-suppliers.css
+++ b/assets/css/atum-suppliers.css
@@ -4683,8 +4683,8 @@ h2 .atum-help-tip {
 
 @media all and (max-width: 782px) {
   .tablenav.top.extend-list-table, #posts-filter .tablenav.top.subsubsub {
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     height: auto;
   }
 }
@@ -4700,6 +4700,12 @@ h2 .atum-help-tip {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+}
+
+@media all and (max-width: 782px) {
+  .tablenav.top .actions {
+    display: block;
   }
 }
 
@@ -4809,6 +4815,12 @@ h2 .atum-help-tip {
 @media screen and (max-width: 1400px) {
   .tablenav.top .filters-container-box.no-submit {
     width: calc(100% - 300px);
+  }
+}
+
+@media all and (max-width: 782px) {
+  .tablenav.top .filters-container-box.no-submit {
+    width: 100%;
   }
 }
 
@@ -5337,10 +5349,6 @@ h2 .atum-help-tip {
   }
 }
 
-.atum-list-wrapper .actions #select2-supplier-container, #posts-filter .actions #select2-supplier-container {
-  padding: 0 30px 0 16px;
-}
-
 .atum-list-wrapper .actions input[type=submit], #posts-filter .actions input[type=submit] {
   line-height: 0;
   text-transform: uppercase;
@@ -5406,6 +5414,7 @@ h2 .atum-help-tip {
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
+    margin: 0;
   }
   .atum-list-wrapper .filter-box, #posts-filter .filter-box {
     display: -webkit-box;
